--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,12 @@
 			<artifactId>shiro-spring</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+		
+	<dependency>
+  		<groupId>com.fasterxml.jackson.core</groupId>
+  		<artifactId>jackson-databind</artifactId>
+ 		 <version>[2.9.8,)</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>shiro</finalName>
